fix: overflow body

--- a/styles/global.css
+++ b/styles/global.css
@@ -158,7 +158,7 @@ li{
   margin: 0!important;
 }
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: HelveticaRegular;
